Added feed discovery.

--- a/_includes/layout-main.njk
+++ b/_includes/layout-main.njk
@@ -7,6 +7,7 @@ title: Home
   <head>
     {% include "partial-meta.njk" %} <link rel="stylesheet" href="/bootstrap/bootstrap.css"/>
     <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed for {{site.url}}" href="/feed/" />
     <script type="module" src="/js/main.js" defer></script>
   </head>
   <body class="d-flex flex-column h-100">
