Added Mastodon link.

--- a/_includes/layout-main.njk
+++ b/_includes/layout-main.njk
@@ -49,6 +49,9 @@ title: Home
                 <a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}>{{ item.key }}</a>
               </li>
             {% endfor %}
+              <li class="nav-item">
+                <a rel="me" href="https://mastodon.social/@FediverseExplorations">@FediverseExplorations</a>
+              </li>
           </ul>
         </div>
       </nav>
