Fixed nav link styling.

--- a/_includes/layout-main.njk
+++ b/_includes/layout-main.njk
@@ -50,7 +50,7 @@ title: Home
               </li>
             {% endfor %}
               <li class="nav-item">
-                <a rel="me" href="https://mastodon.social/@FediverseExplorations">@FediverseExplorations</a>
+                <a rel="me" class="nav-link link-secondary" href="https://mastodon.social/@FediverseExplorations">@FediverseExplorations</a>
               </li>
           </ul>
         </div>
