--- a/_includes/layout-main.njk
+++ b/_includes/layout-main.njk
@@ -68,6 +68,7 @@ title: Home
           <a class="text-body-secondary" href="https://stefanbohacek.com/">Stefan Bohacek</a>
           with
           <a class="text-body-secondary" href="https://www.11ty.dev/">11ty</a>.
+          <a href="https://github.com/stefanbohacek/fediverse-explorations">View source.</a>
         </p>
       </div>
       <a
